<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/inquilinos">

    <TextView
        android:id="@+id/tituloPaginaPrincipal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:text="@string/tv_tituloPrincipal"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_Inquilinos"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="170dp"
        android:onClick="btnVentanaInquilinos"
        android:text="@string/btn_Inquilinos"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tituloPaginaPrincipal" />

    <Button
        android:id="@+id/btn_Inmuebless"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:onClick="btnVentanaInmuebles"
        android:text="@string/btn_Inmuebles"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_Inquilinos"/>

    <Button
        android:id="@+id/btn_Contratos"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:onClick="btnVentanaContratos"
        android:text="@string/btn_Contratos"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_Inmuebless"/>

</androidx.constraintlayout.widget.ConstraintLayout>